--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body{
     color:#fff !important;
     vertical-align: middle;
     font-family: 'Raleway', sans-serif !important;
+    height:100%;
 }
 body a{
     text-decoration:none;
