--- a/style.css
+++ b/style.css
@@ -15,3 +15,11 @@ body a{
     text-decoration:none;
     color:#ffffff !important;
 }
+.vertical-center-row{
+    width:100%;
+    height:100%;
+    display:table;
+}
+.middle-align{
+    display:table-cell;
+}
