--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body a{
     color: transparent;
   }
   50% {
-    color: black;
+    color: white;
   }
 }
 
@@ -38,7 +38,7 @@ body a{
     color: transparent;
   }
   50% {
-    color: black;
+    color: white;
   }
 }
 
@@ -47,7 +47,7 @@ body a{
     color: transparent;
   }
   50% {
-    color: black;
+    color: white;
   }
 }
 
@@ -56,7 +56,7 @@ body a{
     color: transparent;
   }
   50% {
-    color: black;
+    color: white;
   }
 }
 
@@ -65,7 +65,7 @@ body a{
     color: transparent;
   }
   50% {
-    color: black;
+    color: white;
   }
 }
 
