--- a/assets/style.css
+++ b/assets/style.css
@@ -79,6 +79,7 @@ section {
   background-attachment: fixed;
   background-size: cover;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
@@ -87,9 +88,20 @@ section {
   padding: 15px;
   background: var(--background-ternary);
 }
+.more-button {
+  width: 95vw;
+  align-self: flex-end;
+}
 #intro {
   font-size: 1.3em;
 }
+
+@media (max-width: 700px) {
+  .landing-section {
+    background-image: url("/assets/img/bg-mobile.jpeg");
+  }
+}
+
 /*------------ External CSS ------------*/
 /* Nav CSS from jekyll-theme-clean-blog */
 #mainNav {
