--- a/assets/style.css
+++ b/assets/style.css
@@ -100,7 +100,7 @@ hr.separator {
   width: 50%;
   border: 0;
   height: 1px;
-  margin: 15px auto;
+  margin: 15px auto 20px auto;
   background-color: var(--background-ternary);
 }
 a.btn {
