--- a/assets/style.css
+++ b/assets/style.css
@@ -121,6 +121,8 @@ section {
   font-size: 1.3rem;
   font-weight: bold;
   color: var(--font-ternary);
+  text-shadow: 0px 4px 2px var(--background-ternary),
+    0px 0px 10px rgba(255, 255, 255, 0.8);
 }
 hr.separator {
   width: 50%;
